[UPDATE] add mansell in Japanese

--- a/ColorName.html
+++ b/ColorName.html
@@ -144,54 +144,71 @@
             <!-- Blue type -->
             <div id="asagi" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2.5B&nbsp;5/8</p>
                 <p class="item-name">浅葱色</p>
                 <p class="item-ruby">あさぎいろ</p>
             </div>
             <div id="sora" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">9B&nbsp;7.5/5.5</p>
                 <p class="item-name">空色</p>
                 <p class="item-ruby">そらいろ</p>
             </div>
             <div id="ai" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2PB&nbsp;3/5</p>
                 <p class="item-name">藍色</p>
                 <p class="item-ruby">あいいろ</p>
             </div>
             <div id="ruri" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">6PB&nbsp;3.5/11</p>
                 <p class="item-name">瑠璃色</p>
                 <p class="item-ruby">るりいろ</p>
             </div>
             <div id="kakitubata" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7PB&nbsp;4/10</p>
                 <p class="item-name">杜若色</p>
                 <p class="item-ruby">かきつばたいろ</p>
             </div>
             <div id="gunjou" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7.5PB&nbsp;3.5/11</p>
                 <p class="item-name">群青色</p>
                 <p class="item-ruby">ぐんじょういろ</p>
             </div>
             <div id="kikyou" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">9PB&nbsp;3.5/13</p>
                 <p class="item-name">桔梗色</p>
                 <p class="item-ruby">ききょういろ</p>
             </div>
             <!-- Purple type -->
             <div id="nasukon" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7.5P&nbsp;2.5/2.5</p>
                 <p class="item-name">茄子紺</p>
                 <p class="item-ruby">なすこん</p>
             </div>
             <div id="ayame" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10P&nbsp;6/10</p>
                 <p class="item-name">菖蒲色</p>
                 <p class="item-ruby">あやめいろ</p>
             </div>
             <div id="botan" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">3RP&nbsp;5/14</p>
                 <p class="item-name">牡丹色</p>
                 <p class="item-ruby">ぼたんいろ</p>
+            </div>
+            <!-- Achromatic type -->
+            <div id="kinari" class="item third">
+                <div class="item-color"></div>
+                <p class="mansell">10YR&nbsp;9/1</p>
+                <p class="item-name">生成り色</p>
+                <p class="item-ruby">きなりいろ</p>
             </div>
         </div>
         
@@ -201,61 +218,75 @@
             <!-- Red type -->
             <div id="winered" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10RP&nbsp;3/9</p>
                 <p class="item-name">ワインレッド</p>
                 <p class="item-ruby">wine red</p>
             </div>
+            <div id="bordeaux" class="item third">
+                <div class="item-color"></div>
+                <p class="mansell">2.5R&nbsp;2.5</p>
+                <p class="item-name">ボルドー</p>
+            </div>
             <div id="babypink" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">4R&nbsp;8.5/4</p>
                 <p class="item-name">ベビーピンク</p>
                 <p class="item-ruby">baby pink</p>
             </div>
-            <div id="bordeaux" class="item third">
-                <div class="item-color"></div>
-                <p class="item-name">ボルドー</p>
-            </div>
             <div id="carmine" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">4R&nbsp;4/14</p>
                 <p class="item-name">カーマイン</p>
             </div>
             <div id="vermilion" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">6R&nbsp;5.5/14</p>
                 <p class="item-name">バーミリオン</p>
             </div>
             <div id="scarlet" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7R&nbsp;5/14</p>
                 <p class="item-name">スカーレット</p>
             </div>
             <div id="salmonpink" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">8R&nbsp;7.5/7.5</p>
                 <p class="item-name">サーモンピンク</p>
             </div>
             <div id="chocolate" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10R&nbsp;2.5/2.5</p>
                 <p class="item-name">チョコレート</p>
             </div>
             <!-- Yellow type -->
             <div id="peach" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">3YR&nbsp;8/3.5</p>
                 <p class="item-name">ピーチ</p>
             </div>
             <div id="marigold" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">8YR&nbsp;7.5/13</p>
                 <p class="item-name">マリーゴールド</p>
             </div>
             <div id="beige" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10YR&nbsp;7/2.5</p>
                 <p class="item-name">ベージュ</p>
-            </div>
-            <div id="khaki" class="item third">
-                <div class="item-color"></div>
-                <p class="item-name">カーキー</p>
             </div>
             <div id="sepia" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10YR&nbsp;2.5/2</p>
                 <p class="item-name">セピア</p>
+            </div>
+            <div id="khaki" class="item third">
+                <div class="item-color"></div>
+                <p class="mansell">1Y&nbsp;5/5.5</p>
+                <p class="item-name">カーキー</p>
             </div>
             <div id="blond" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2Y&nbsp;7.5/7</p>
                 <p class="item-name">ブロンド</p>
             </div>
             <div id="creamyellow" class="item third">
@@ -369,140 +400,167 @@
             <!-- Red type -->
             <div id="toki" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">7RP&nbsp;7.5/8</p>
                 <p class="item-name">鴇色</p>
                 <p class="item-ruby">ときいろ</p>
             </div>
             <div id="karakurenai" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">1.5R&nbsp;5.5/13</p>
                 <p class="item-name">韓紅花</p>
                 <p class="item-ruby">からくれない</p>
             </div>
             <div id="suou" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">4R&nbsp;4/7</p>
                 <p class="item-name">蘇芳</p>
                 <p class="item-ruby">すおう</p>
             </div>
             <div id="tobi" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">7.5R&nbsp;3.5/5</p>
                 <p class="item-name">鳶色</p>
                 <p class="item-ruby">とびいろ</p>
             </div>
             <div id="ebitya" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">8R&nbsp;3/4.5</p>
                 <p class="item-name">海老茶</p>
                 <p class="item-ruby">えびちゃ</p>
             </div>
             <div id="bengara" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">8R&nbsp;3.5/7</p>
                 <p class="item-name">弁柄色</p>
                 <p class="item-ruby">べんがらいろ</p>
             </div>
             <div id="ouni" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">10R&nbsp;6/12</p>
                 <p class="item-name">黄丹</p>
                 <p class="item-ruby">おうに</p>
             </div>
             <div id="hiwada" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">1YR&nbsp;4.3/4</p>
                 <p class="item-name">桧皮色</p>
                 <p class="item-ruby">ひわだいろ</p>
             </div>
             <div id="taisya" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">2.5YR&nbsp;5/8.5</p>
                 <p class="item-name">代赭</p>
                 <p class="item-ruby">たいしゃ</p>
             </div>
             <!-- Yellow type -->
             <div id="kouzi" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">5.5YR&nbsp;7.5/9</p>
                 <p class="item-name">柑子色</p>
                 <p class="item-ruby">こうじいろ</p>
             </div>
             <div id="kohaku" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">8YR&nbsp;5.5/6.5</p>
                 <p class="item-name">琥珀色</p>
                 <p class="item-ruby">こはくいろ</p>
             </div>
             <div id="kutiba" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">10YR&nbsp;5/2</p>
                 <p class="item-name">朽葉色</p>
                 <p class="item-ruby">くちばいろ</p>
             </div>
             <div id="ukon" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">2Y&nbsp;7.5/12</p>
                 <p class="item-name">鬱金色</p>
                 <p class="item-ruby">うこんいろ</p>
             </div>
             <div id="kariyasu" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">7Y&nbsp;8.5/7</p>
                 <p class="item-name">刈安色</p>
                 <p class="item-ruby">かりやすいろ</p>
             </div>
             <div id="kihada" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">9Y&nbsp;8/8</p>
                 <p class="item-name">黄檗色</p>
                 <p class="item-ruby">きはだいろ</p>
             </div>
             <div id="miru" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">9.5Y&nbsp;4.5/2.5</p>
                 <p class="item-name">海松色</p>
                 <p class="item-ruby">みるいろ</p>
             </div>
             <div id="hiwa" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">1GY&nbsp;7.5/8</p>
                 <p class="item-name">鶸色</p>
                 <p class="item-ruby">ひわいろ</p>
             </div>
             <!-- Green type -->
             <div id="tokiwa" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">3G&nbsp;4.5/7</p>
                 <p class="item-name">常盤色</p>
                 <p class="item-ruby">ときわいろ</p>
             </div>
             <div id="rokusyou" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">4G&nbsp;5/4</p>
                 <p class="item-name">緑青色</p>
                 <p class="item-ruby">ろくしょういろ</p>
             </div>
             <div id="tetu" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">2.5BG&nbsp;2.5/2.5</p>
                 <p class="item-name">鉄色</p>
                 <p class="item-ruby">てついろ</p>
             </div>
             <!-- Blue type -->
             <div id="sinbasi" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">2.5B&nbsp;6.5/5.5</p>
                 <p class="item-name">新橋色</p>
                 <p class="item-ruby">しんばしいろ</p>
             </div>
             <div id="nando" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">4B&nbsp;4/6</p>
                 <p class="item-name">納戸色</p>
                 <p class="item-ruby">なんどいろ</p>
             </div>
             <div id="kamenozoki" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">4.5B&nbsp;7/4</p>
                 <p class="item-name">甕覗き</p>
                 <p class="item-ruby">かめのぞき</p>
             </div>
             <div id="hanada" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">3PB&nbsp;4/7.5</p>
                 <p class="item-name">縹色</p>
                 <p class="item-ruby">はなだいろ</p>
             </div>
             <!-- Purple type -->
             <div id="huzi" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">10PB&nbsp;6.5/6.5</p>
                 <p class="item-name">藤色</p>
                 <p class="item-ruby">ふじいろ</p>
             </div>
             <div id="edomurasaki" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">3P&nbsp;3.5/7</p>
                 <p class="item-name">江戸紫</p>
                 <p class="item-ruby">えどむらさき</p>
             </div>
             <div id="kodaimurasaki" class="item second">
                 <div class="item-color"></div>
+                <p class="mansell">7.5P&nbsp;4/6</p>
                 <p class="item-name">古代紫</p>
                 <p class="item-ruby">こだいむらさき</p>
             </div>
