[UPDATE] add mansell

--- a/ColorName.html
+++ b/ColorName.html
@@ -226,6 +226,7 @@
                 <div class="item-color"></div>
                 <p class="mansell">2.5R&nbsp;2.5</p>
                 <p class="item-name">ボルドー</p>
+                <p class="item-ruby">bordeaux</p>
             </div>
             <div id="babypink" class="item third">
                 <div class="item-color"></div>
@@ -237,26 +238,31 @@
                 <div class="item-color"></div>
                 <p class="mansell">4R&nbsp;4/14</p>
                 <p class="item-name">カーマイン</p>
+                <p class="item-ruby">carmine</p>
             </div>
             <div id="vermilion" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">6R&nbsp;5.5/14</p>
                 <p class="item-name">バーミリオン</p>
+                <p class="item-ruby">vermilion</p>
             </div>
             <div id="scarlet" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">7R&nbsp;5/14</p>
                 <p class="item-name">スカーレット</p>
+                <p class="item-ruby">scarlet</p>
             </div>
             <div id="salmonpink" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">8R&nbsp;7.5/7.5</p>
                 <p class="item-name">サーモンピンク</p>
+                <p class="item-ruby">salmon pink</p>
             </div>
             <div id="chocolate" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">10R&nbsp;2.5/2.5</p>
                 <p class="item-name">チョコレート</p>
+                <p class="item-ruby"></p>
             </div>
             <!-- Yellow type -->
             <div id="peach" class="item third">
@@ -291,102 +297,126 @@
             </div>
             <div id="creamyellow" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">5Y&nbsp;8.5/3.5</p>
                 <p class="item-name">クリームイエロー</p>
-            </div>
-            <div id="lemonyellow" class="item third">
-                <div class="item-color"></div>
-                <p class="item-name">レモンイエロー</p>
             </div>
             <div id="canaryyellow" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7Y&nbsp;8.5/19</p>
                 <p class="item-name">カナリヤ</p>
             </div>
             <div id="olive" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7.5Y&nbsp;3.5/4</p>
                 <p class="item-name">オリーブ</p>
+            </div>
+            <div id="lemonyellow" class="item third">
+                <div class="item-color"></div>
+                <p class="mansell">8Y&nbsp;8/12</p>
+                <p class="item-name">レモンイエロー</p>
             </div>
             <!-- Green type -->
             <div id="olivegreen" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2.5GY&nbsp;3.5/3</p>
                 <p class="item-name">オリーブグリーン</p>
             </div>
             <div id="cobaltgreen" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">4G&nbsp;7/9</p>
                 <p class="item-name">コバルトグリーン</p>
             </div>
             <div id="emeraldgreen" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">4G&nbsp;6/8</p>
                 <p class="item-name">エメラルドグリーン</p>
             </div>
             <div id="viridian" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">8G&nbsp;4/6</p>
                 <p class="item-name">ビリジアン</p>
             </div>
             <!-- Blue type -->
             <div id="turquoiseblue" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">5B&nbsp;6/8</p>
                 <p class="item-name">ターコイズブルー</p>
             </div>
             <div id="marineblue" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">5B&nbsp;3/7</p>
                 <p class="item-name">マリンブルー</p>
             </div>
             <div id="cyan" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7.5B&nbsp;6/10</p>
                 <p class="item-name">シアン</p>
             </div>
             <div id="skyblue" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">9B&nbsp;7.5/5.5</p>
                 <p class="item-name">スカイブルー</p>
             </div>
             <div id="babyblue" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10B&nbsp;7.5/3</p>
                 <p class="item-name">ベビーブルー</p>
             </div>
             <div id="cobaltblue" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">3PB&nbsp;4/10</p>
                 <p class="item-name">コバルトブルー</p>
             </div>
             <div id="navyblue" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">6PB&nbsp;2.5/4</p>
                 <p class="item-name">ネービーブルー</p>
             </div>
             <div id="ultramarineblue" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7.5PB&nbsp;3.5/11</p>
                 <p class="item-name">ウルトラマリンブルー</p>
             </div>
             <!-- Purple type -->
             <div id="violet" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2.5P&nbsp;4/11</p>
                 <p class="item-name">バイオレット</p>
             </div>
             <div id="mauve" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">5P&nbsp;4.5/9</p>
                 <p class="item-name">モーブ</p>
             </div>
             <div id="lavender" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">5P&nbsp;6/3</p>
                 <p class="item-name">ラベンダー</p>
             </div>
             <div id="purple" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7.5P&nbsp;5/12</p>
                 <p class="item-name">パープル</p>
             </div>
             <div id="magenta" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">5RP&nbsp;5/14</p>
                 <p class="item-name">マゼンタ</p>
             </div>
             <!-- Achromatic type -->
             <div id="ivory" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2.5Y&nbsp;8.5/1.5</p>
                 <p class="item-name">アイボリー</p>
             </div>
             <div id="silvergray" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">N&nbsp;6.5</p>
                 <p class="item-name">シルバーグレイ</p>
             </div>
             <div id="charcoalgray" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">5P&nbsp;3/1</p>
                 <p class="item-name">チャコールグレイ</p>
             </div>
         </div>
