--- a/ColorName.html
+++ b/ColorName.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>menuButton</title>
+    <title>JIS慣用色名</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 
@@ -262,162 +262,192 @@
                 <div class="item-color"></div>
                 <p class="mansell">10R&nbsp;2.5/2.5</p>
                 <p class="item-name">チョコレート</p>
-                <p class="item-ruby"></p>
+                <p class="item-ruby">chocolate</p>
             </div>
             <!-- Yellow type -->
             <div id="peach" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">3YR&nbsp;8/3.5</p>
                 <p class="item-name">ピーチ</p>
+                <p class="item-ruby">peach</p>
             </div>
             <div id="marigold" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">8YR&nbsp;7.5/13</p>
                 <p class="item-name">マリーゴールド</p>
+                <p class="item-ruby">marigold</p>
             </div>
             <div id="beige" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">10YR&nbsp;7/2.5</p>
                 <p class="item-name">ベージュ</p>
+                <p class="item-ruby">beige</p>
             </div>
             <div id="sepia" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">10YR&nbsp;2.5/2</p>
                 <p class="item-name">セピア</p>
+                <p class="item-ruby">sepia</p>
             </div>
             <div id="khaki" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">1Y&nbsp;5/5.5</p>
                 <p class="item-name">カーキー</p>
+                <p class="item-ruby">khaki</p>
             </div>
             <div id="blond" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">2Y&nbsp;7.5/7</p>
                 <p class="item-name">ブロンド</p>
+                <p class="item-ruby">blond</p>
             </div>
             <div id="creamyellow" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">5Y&nbsp;8.5/3.5</p>
                 <p class="item-name">クリームイエロー</p>
+                <p class="item-ruby">cream yellow</p>
             </div>
             <div id="canaryyellow" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">7Y&nbsp;8.5/19</p>
                 <p class="item-name">カナリヤ</p>
+                <p class="item-ruby">canary yellow</p>
             </div>
             <div id="olive" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">7.5Y&nbsp;3.5/4</p>
                 <p class="item-name">オリーブ</p>
+                <p class="item-ruby">olive</p>
             </div>
             <div id="lemonyellow" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">8Y&nbsp;8/12</p>
                 <p class="item-name">レモンイエロー</p>
+                <p class="item-ruby">lemon yellow</p>
             </div>
             <!-- Green type -->
             <div id="olivegreen" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">2.5GY&nbsp;3.5/3</p>
                 <p class="item-name">オリーブグリーン</p>
+                <p class="item-ruby">olive green</p>
             </div>
             <div id="cobaltgreen" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">4G&nbsp;7/9</p>
                 <p class="item-name">コバルトグリーン</p>
+                <p class="item-ruby">cobalt green</p>
             </div>
             <div id="emeraldgreen" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">4G&nbsp;6/8</p>
                 <p class="item-name">エメラルドグリーン</p>
+                <p class="item-ruby">emerald green</p>
             </div>
             <div id="viridian" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">8G&nbsp;4/6</p>
                 <p class="item-name">ビリジアン</p>
+                <p class="item-ruby">viridian</p>
             </div>
             <!-- Blue type -->
             <div id="turquoiseblue" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">5B&nbsp;6/8</p>
                 <p class="item-name">ターコイズブルー</p>
+                <p class="item-ruby">turquoise blue</p>
             </div>
             <div id="marineblue" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">5B&nbsp;3/7</p>
                 <p class="item-name">マリンブルー</p>
+                <p class="item-ruby">marine blue</p>
             </div>
             <div id="cyan" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">7.5B&nbsp;6/10</p>
                 <p class="item-name">シアン</p>
+                <p class="item-ruby">cyan</p>
             </div>
             <div id="skyblue" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">9B&nbsp;7.5/5.5</p>
                 <p class="item-name">スカイブルー</p>
+                <p class="item-ruby">sky blue</p>
             </div>
             <div id="babyblue" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">10B&nbsp;7.5/3</p>
                 <p class="item-name">ベビーブルー</p>
+                <p class="item-ruby">baby blue</p>
             </div>
             <div id="cobaltblue" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">3PB&nbsp;4/10</p>
                 <p class="item-name">コバルトブルー</p>
+                <p class="item-ruby">cobalt blue</p>
             </div>
             <div id="navyblue" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">6PB&nbsp;2.5/4</p>
                 <p class="item-name">ネービーブルー</p>
+                <p class="item-ruby">navy blue</p>
             </div>
             <div id="ultramarineblue" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">7.5PB&nbsp;3.5/11</p>
                 <p class="item-name">ウルトラマリンブルー</p>
+                <p class="item-ruby">ultramarine blue</p>
             </div>
             <!-- Purple type -->
             <div id="violet" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">2.5P&nbsp;4/11</p>
                 <p class="item-name">バイオレット</p>
+                <p class="item-ruby">violet</p>
             </div>
             <div id="mauve" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">5P&nbsp;4.5/9</p>
                 <p class="item-name">モーブ</p>
+                <p class="item-ruby">mauve</p>
             </div>
             <div id="lavender" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">5P&nbsp;6/3</p>
                 <p class="item-name">ラベンダー</p>
+                <p class="item-ruby">lavender</p>
             </div>
             <div id="purple" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">7.5P&nbsp;5/12</p>
                 <p class="item-name">パープル</p>
+                <p class="item-ruby">purple</p>
             </div>
             <div id="magenta" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">5RP&nbsp;5/14</p>
                 <p class="item-name">マゼンタ</p>
+                <p class="item-ruby">magenta</p>
             </div>
             <!-- Achromatic type -->
             <div id="ivory" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">2.5Y&nbsp;8.5/1.5</p>
                 <p class="item-name">アイボリー</p>
+                <p class="item-ruby">ivory</p>
             </div>
             <div id="silvergray" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">N&nbsp;6.5</p>
                 <p class="item-name">シルバーグレイ</p>
+                <p class="item-ruby">silver grey</p>
             </div>
             <div id="charcoalgray" class="item third">
                 <div class="item-color"></div>
                 <p class="mansell">5P&nbsp;3/1</p>
                 <p class="item-name">チャコールグレイ</p>
+                <p class="item-ruby">charcoal grey</p>
             </div>
         </div>
 
