[UPDATE] add ruby

--- a/ColorName.html
+++ b/ColorName.html
@@ -665,161 +665,192 @@
                 <div class="item-color"></div>
                 <p class="mansell">10RP&nbsp;2/2.5</p>
                 <p class="item-name">バーガンディー</p>
+                <p class="item-ruby">burgundy</p>
             </div>
             <div id="oldrose" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">1R&nbsp;6/6.5</p>
                 <p class="item-name">オールドローズ</p>
+                <p class="item-ruby">old rose</p>
             </div>
             <div id="poppyred" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">4R&nbsp;5/14</p>
                 <p class="item-name">ポピーレッド</p>
+                <p class="item-ruby">poppy red</p>
             </div>
             <div id="maroon" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">5R&nbsp;2.5/6</p>
                 <p class="item-name">マルーン</p>
+                <p class="item-ruby">maroon</p>
             </div>
             <div id="terracotta" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">7.5R&nbsp;4.5/8</p>
                 <p class="item-name">テラコッタ</p>
+                <p class="item-ruby">terracotta</p>
             </div>
             <div id="burntsienna" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">10R&nbsp;4.5/7.5</p>
                 <p class="item-name">バーントシェンナ</p>
+                <p class="item-ruby">burnt sienna</p>
             </div>
             <div id="rawsienna" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">4YR&nbsp;5/9</p>
                 <p class="item-name">ローシェンナ</p>
+                <p class="item-ruby">raw sienna</p>
             </div>
             <!-- Yellow type -->
             <div id="tan" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">6YR&nbsp;5/6</p>
                 <p class="item-name">タン</p>
+                <p class="item-ruby">tan</p>
             </div>
             <div id="ecrubeige" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">7.5YR&nbsp;8.5/4</p>
                 <p class="item-name">エクルベイジュ</p>
+                <p class="item-ruby">ecru beige</p>
             </div>
             <div id="goldenyellow" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">7.5YR&nbsp;7/10</p>
                 <p class="item-name">ゴールデンイエロー</p>
+                <p class="item-ruby">golden yellow</p>
             </div>
             <div id="amber" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">8YR&nbsp;5.5/6.5</p>
                 <p class="item-name">アンバー</p>
+                <p class="item-ruby">amber</p>
             </div>
             <div id="burntamber" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">10YR&nbsp;3/3</p>
                 <p class="item-name">バーントアンバー</p>
+                <p class="item-ruby">burnt umber</p>
             </div>
             <div id="rawamber" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">2.5Y&nbsp;4/6</p>
                 <p class="item-name">ローアンバー</p>
+                <p class="item-ruby">raw umber</p>
             </div>
             <div id="naplesyellow" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">2.5Y&nbsp;8/7.5</p>
                 <p class="item-name">ネープルスイエロー</p>
+                <p class="item-ruby">naples yellow</p>
             </div>
             <div id="jaunebrillant" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">5Y&nbsp;8.5/14</p>
                 <p class="item-name">ジョンブリアン</p>
+                <p class="item-ruby">jaune brillant</p>
             </div>
             <!-- Green type -->
             <div id="chartreusegreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">4GY&nbsp;8/10</p>
                 <p class="item-name">シャトルーズグリーン</p>
+                <p class="item-ruby">chartreuse green</p>
             </div>
             <div id="leafgreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">5GY&nbsp;6/7</p>
                 <p class="item-name">リーフグリーン</p>
+                <p class="item-ruby">leaf green</p>
             </div>
             <div id="grassgreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">5GY&nbsp;5/5</p>
                 <p class="item-name">グラスグリーン</p>
+                <p class="item-ruby">grass green</p>
             </div>
             <div id="applegreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">10GY&nbsp;8/5</p>
                 <p class="item-name">アップルグリーン</p>
+                <p class="item-ruby">apple green</p>
             </div>
             <div id="mintgreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">2.5G&nbsp;7.5/8</p>
                 <p class="item-name">ミントグリーン</p>
+                <p class="item-ruby">mint green</p>
             </div>
             <div id="malachitegreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">4G&nbsp;4.5/9</p>
                 <p class="item-name">マラカイトグリーン</p>
+                <p class="item-ruby">malachite green</p>
             </div>
             <div id="bottlegreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">5G&nbsp;2.5/3</p>
                 <p class="item-name">ボトルグリーン</p>
+                <p class="item-ruby">bottle green</p>
             </div>
             <div id="peacockgreen" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">7.5BG&nbsp;4.5/9</p>
                 <p class="item-name">ピーコックグリーン</p>
+                <p class="item-ruby">peacock green</p>
             </div>
             <!-- Blue type -->
             <div id="nileblue" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">10BG&nbsp;5.5/5</p>
                 <p class="item-name">ナイルブルー</p>
+                <p class="item-ruby">nile blue</p>
             </div>
             <div id="ceruleanblue" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">9B&nbsp;4.5/9</p>
                 <p class="item-name">セルリアンブルー</p>
+                <p class="item-ruby">cerulean blue</p>
             </div>
             <div id="saxeblue" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">1PB&nbsp;5/4.5</p>
                 <p class="item-name">サックスブルー</p>
+                <p class="item-ruby">saxe blue</p>
             </div>
             <div id="midnightblue" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">5PB&nbsp;1.5/2</p>
                 <p class="item-name">ミッドナイトブルー</p>
+                <p class="item-ruby">midnight blue</p>
             </div>
             <!-- Purple type -->
             <div id="wistaria" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">10PB&nbsp;5/12</p>
                 <p class="item-name">ウィスタリア</p>
+                <p class="item-ruby">wistaria</p>
             </div>
             <div id="lilac" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">6P&nbsp;7/6</p>
                 <p class="item-name">ライラック</p>
+                <p class="item-ruby">lilac</p>
             </div>
             <!-- Achromatic type -->
             <div id="slategray" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">2.5PB&nbsp;3.5/0.5</p>
                 <p class="item-name">スレートグレイ</p>
+                <p class="item-ruby">slate grey</p>
             </div>
             <div id="lampblack" class="item second">
                 <div class="item-color"></div>
                 <p class="mansell">N&nbsp;1</p>
                 <p class="item-name">ランプブラック</p>
+                <p class="item-ruby">lamp black</p>
             </div>
         </div>
     </main>
