[UPDATE] change subtitle design

--- a/ColorName.html
+++ b/ColorName.html
@@ -52,7 +52,7 @@
 
         
         <!-- Japanese -->
-        <h3>和名</h3>
+        <h3 class="subtitle japanese-name">和名</h3>
         <div class="container">
             <!-- Red type -->
             <div id="toki" class="item second japanese-name">
@@ -405,7 +405,7 @@
         </div>
         
         <!-- Foreign -->
-        <h3>外来色名</h3>
+        <h3 class="subtitle english-name">外来色名</h3>
         <div class="container">
             <!-- Red type -->
             <div id="rosepink" class="item second english-name">
