[TEST] change checkbox design

--- a/ColorName.html
+++ b/ColorName.html
@@ -32,11 +32,14 @@
         <h2>JIS慣用色名</h2>
         <!-- checkbox -->
         <div class="checkboxes">
-            <input type="checkbox" id="box-first" checked>
-            <label for="box-first">1級</label>
-
+            
+            <button id="test" class="checked">
+                1級</button>
+            
+            <div class="checkbox">
             <input type="checkbox" id="box-second" checked>
             <label for="box-second">2級</label>
+            </div>   
 
             <input type="checkbox" id="box-third" checked>
             <label for="box-third">3級</label>
