[UPDATE] change checkbox

--- a/ColorName.html
+++ b/ColorName.html
@@ -32,24 +32,26 @@
         <h2>JIS慣用色名</h2>
         <!-- checkbox -->
         <div class="checkboxes">
-            
-            <button id="test" class="checked">
-                1級</button>
-            
-            <div class="checkbox">
-            <input type="checkbox" id="box-second" checked>
-            <label for="box-second">2級</label>
+            <div id="checkbox-second" class="checkbox">
+                <input type="checkbox" id="box-second" checked>
+                <label for="box-second">2級</label>
             </div>   
 
-            <input type="checkbox" id="box-third" checked>
-            <label for="box-third">3級</label>
+            <div id="checkbox-third" class="checkbox">
+                <input type="checkbox" id="box-third" checked>
+                <label for="box-third">3級</label>
+            </div>
         </div>
         <div class="checkboxes">
-            <input type="checkbox" id="box-japanese-name" checked>
-            <label for="box-japanese-name">和名</label>
+            <div id="checkbox-japanese-name" class="checkbox">
+                <input type="checkbox" id="box-japanese-name" checked>
+                <label for="box-japanese-name">和名</label>
+            </div>
 
-            <input type="checkbox" id="box-english-name" checked>
-            <label for="box-english-name">外来色名</label>
+            <div id="checkbox-english-name" class="checkbox">
+                <input type="checkbox" id="box-english-name" checked>
+                <label for="box-english-name">外来色名</label>
+            </div>
         </div>
         <script src="ColorName.js"></script>
 
