--- a/ColorName.html
+++ b/ColorName.html
@@ -31,26 +31,52 @@
     <main>
         <h2>JIS慣用色名</h2>
         <!-- checkbox -->
-        <div class="checkboxes">
-            <div id="checkbox-second" class="checkbox">
-                <input type="checkbox" id="box-second" checked>
-                <label for="box-second">2級</label>
-            </div>   
+        <div class="CheckBoxes">
+            <div class="circle-checkboxes"> 
+                <div class="circle">
+                    <svg viewBox="0 0 100 100">
+                        <path d="M 0,50 a 50,50 0 1,1 0,1 z" id="circle" />
+                        <text>
+                            <textPath  xlink:href="#circle">
+                            Grade
+                            </textPath>
+                        </text>
+                    </svg>
+                </div>
+                <div class="checkboxes">
+                    <div id="checkbox-second" class="checkbox">
+                        <input type="checkbox" id="box-second" checked>
+                        <label for="box-second">2級</label>
+                    </div>   
 
-            <div id="checkbox-third" class="checkbox">
-                <input type="checkbox" id="box-third" checked>
-                <label for="box-third">3級</label>
+                    <div id="checkbox-third" class="checkbox">
+                        <input type="checkbox" id="box-third" checked>
+                        <label for="box-third">3級</label>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="checkboxes">
-            <div id="checkbox-japanese-name" class="checkbox">
-                <input type="checkbox" id="box-japanese-name" checked>
-                <label for="box-japanese-name">和名</label>
-            </div>
+            <div class="circle-checkboxes">
+                <div class="circle">
+                    <svg viewBox="0 0 100 100">
+                        <path d="M 0,50 a 50,50 0 1,1 0,1 z" id="circle" />
+                        <text>
+                            <textPath  xlink:href="#circle">
+                            Type
+                            </textPath>
+                        </text>
+                    </svg>
+                </div>
+                <div class="checkboxes">
+                    <div id="checkbox-japanese-name" class="checkbox">
+                        <input type="checkbox" id="box-japanese-name" checked>
+                        <label for="box-japanese-name">和名</label>
+                    </div>
 
-            <div id="checkbox-english-name" class="checkbox">
-                <input type="checkbox" id="box-english-name" checked>
-                <label for="box-english-name">外来色名</label>
+                    <div id="checkbox-english-name" class="checkbox">
+                        <input type="checkbox" id="box-english-name" checked>
+                        <label for="box-english-name">外来色名</label>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="ColorName.js"></script>
